@startuml
abstract class com.gachapet.model.AbstractPet {
- {static} long serialVersionUID
+ {static} int MAX_HP
+ {static} int MAX_HUNGER
+ {static} int MAX_HAPPINESS
+ {static} int MAX_ENERGY
+ {static} int MAX_LEVEL
- {static} int ACTIVE_DECAY_INTERVAL_SECONDS
- {static} int INACTIVE_DECAY_INTERVAL_SECONDS
- {static} int SLEEP_ENERGY_INTERVAL_SECONDS
- {static} int SLEEP_HUNGER_INTERVAL_SECONDS
- {static} String ENGLISH_NAME_PATTERN
- String name
- int hp
- int hunger
- int happiness
- int energy
- int level
- int experience
- int age
- int inactiveAge
- int imageVariant
- boolean sleeping
+ <<Create>> AbstractPet(String)
+ String getName()
+ int getHp()
+ int getHunger()
+ int getHappiness()
+ int getEnergy()
+ int getLevel()
+ int getExperience()
+ int getAge()
+ boolean isSleeping()
+ boolean isAlive()
+ int getImageVariant()
+ void setName(String)
+ void setHp(int)
+ void setHunger(int)
+ void setHappiness(int)
+ void setEnergy(int)
+ void setLevel(int)
+ void setExperience(int)
+ void setImageVariant(int)
+ void setSleeping(boolean)
- int clamp(int,int,int)
# boolean canDoAction()
+ void eat(int)
+ void play()
+ void sleep()
+ void wakeUp()
+ void gainExperience(int)
+ void updateStatus()
+ void tick()
+ void tickInactive()
+ boolean needsCareAlert()
+ String getCareAlertText()
- void updateHpByCondition()
+ String getStatusText()
# int getHungerDecayRate()
# int getHappinessDecayRate()
# int getEnergyDecayRate()
+ {abstract}String getPetType()
+ {abstract}String getEmoji()
+ {abstract}String makeSound()
+ {abstract}void performAction()
+ {abstract}String getSpecialSkill()
+ String toString()
+ String toCsvString()
}


class com.gachapet.model.Cat {
- {static} int CAT_PLAY_EXP_BONUS
- {static} int CAT_HUNGER_DECAY
+ <<Create>> Cat(String)
+ void eat(int)
+ void play()
# int getHungerDecayRate()
+ void performAction()
+ String makeSound()
+ String getPetType()
+ String getEmoji()
+ String getSpecialSkill()
}


class com.gachapet.model.Dog {
- {static} int DOG_PLAY_HP_BONUS
- {static} int DOG_HUNGER_DECAY
- {static} int DOG_TRICK_EXP_REWARD
+ <<Create>> Dog(String)
+ void eat(int)
+ void play()
# int getHungerDecayRate()
+ void performAction()
+ String makeSound()
+ String getPetType()
+ String getEmoji()
+ String getSpecialSkill()
}


class com.gachapet.model.GachaSystem {
+ {static} double CAT_RATE
+ {static} double DOG_RATE
+ {static} double MYTHIC_RATE
+ {static} int GACHA_COST
- Random random
- {static} String[] CAT_NAMES
- {static} String[] DOG_NAMES
- {static} String[] MYTHIC_NAMES
+ <<Create>> GachaSystem()
+ <<Create>> GachaSystem(long)
+ AbstractPet roll()
+ AbstractPet[] rollTen()
- Cat createCat()
- Dog createDog()
- MythicPet createMythicPet()
+ String getDropRateInfo()
+ boolean canRoll(int)
+ boolean canRollTen(int)
}


class com.gachapet.model.MythicPet {
- {static} double MYTHIC_EXP_MULTIPLIER
- {static} int MYTHIC_HUNGER_DECAY
- {static} int MAX_ULTIMATE_CHARGES
- int ultimateCharges
+ <<Create>> MythicPet(String)
+ void eat(int)
+ void play()
# int getHungerDecayRate()
# int getHappinessDecayRate()
# int getEnergyDecayRate()
+ void performAction()
+ String makeSound()
+ int getUltimateCharges()
+ void addUltimateCharges(int)
+ String getPetType()
+ String getEmoji()
+ String getSpecialSkill()
+ String toString()
+ void setUltimateCharges(int)
+ String toCsvString()
}


interface com.gachapet.model.Actionable {
~ void eat(int)
~ void play()
~ void sleep()
~ void wakeUp()
~ String makeSound()
~ void performAction()
~ String getSpecialSkill()
}



com.gachapet.model.Actionable <|.. com.gachapet.model.AbstractPet
java.io.Serializable <|.. com.gachapet.model.AbstractPet
com.gachapet.model.AbstractPet <|-- com.gachapet.model.Cat
com.gachapet.model.AbstractPet <|-- com.gachapet.model.Dog
com.gachapet.model.AbstractPet <|-- com.gachapet.model.MythicPet
@enduml